<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auth_sign_server_hint">Server</string>
    <string name="auth_sign_nickname_hint">Nickname</string>
    <string name="auth_sign_password_hint">Password</string>
    <string name="auth_sign_sign_in_button_text">Sign In / Sign Up</string>
    <string name="auth_sign_sign_up_button_text">Sign Up</string>
    <string name="auth_code_pin_view_hint">_</string>
    <string name="auth_code_num_pad_key_1">1</string>
    <string name="auth_code_num_pad_key_2">2</string>
    <string name="auth_code_num_pad_key_3">3</string>
    <string name="auth_code_num_pad_key_4">4</string>
    <string name="auth_code_num_pad_key_5">5</string>
    <string name="auth_code_num_pad_key_6">6</string>
    <string name="auth_code_num_pad_key_7">7</string>
    <string name="auth_code_num_pad_key_8">8</string>
    <string name="auth_code_num_pad_key_9">9</string>
    <string name="auth_code_num_pad_key_0">0</string>
    <string name="auth_code_wrong_pin_code">wrong PIN-code</string>
</resources>